Adding styling and tweeking the UI

--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Personal Organizer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/org.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
     <script src="assets/js/lib/jquery-3.3.1.min.js"></script>
 </head>
+
 <body>
     <div id="container">
-        <h1>Personal Todo Organizer</h1>
-        <input type="text">
+        <h1>Personal Todo Organizer<i class="fas fa-plus"></i></h1>
+        <input type="text" placeholder="Add a new todo">
         <ul>
-            <li><span>X </span>Buy veg</li>
-            <li><span>X </span>Groceries</li>
-            <li><span>X </span>Electricity Bill</li>
-            <li><span>X </span>dth bill</li>
+            <li><span><i class="fas fa-trash"></i></span>Buy veg</li>
+            <li><span><i class="fas fa-trash"></i></span>Groceries</li>
+            <li><span><i class="fas fa-trash"></i></span>Electricity Bill</li>
+            <li><span><i class="fas fa-trash"></i></span>dth bill</li>
         </ul>
     </div>
     <script src="assets/js/org.js"></script>
 </body>
+
 </html>
